# concerto-validate-rs

./: Cargo.toml  README.md  build.rs
examples/: basic_usage.rs  cli_usage.sh
src/: error.rs  factory.rs  lib.rs  main.rs  metamodel.rs  metamodel_manager.rs  serializer.rs  validator.rs
src/metamodel_manager/: mod.rs  type_definition.rs
src/model_manager/: ast_structures.rs  mod.rs  type_definition.rs
tests/: cli_tests.rs
