[package]
name = "concerto-validator-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
regex = "1.11.3"

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking"] }
serde_json = "1.0"
sha2 = "0.10"
